# Multi-Threaded-Algorithmic-Trading-System

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
cronjobs/: dev.txt
scripts/: RollLogs.sh  clean_logs.sh
src/: main.cpp
src/CommonServer/: CMakeLists.txt
src/CommonServer/DataStructures/: ConcurrentLockFreeQueue.cpp  ConcurrentLockFreeQueue.hpp  ConcurrentQueueProcessor.cpp  ConcurrentQueueProcessor.hpp
src/CommonServer/Latency/: StopWatch.cpp  StopWatch.hpp
src/CommonServer/TypeSystem/: EnvironmentType.hpp  MdTypes.hpp
src/CommonServer/Utils/: BTConcepts.hpp  ConcurrentQueueProcessor.cpp  ConcurrentQueueProcessor.hpp  ConfigManager.cpp  ConfigManager.hpp  ConfigReader.hpp  DataTime.hpp  DateTimes.hpp  Hasher.hpp  LogLevel.hpp  MdTypes.hpp  StopWatch.cpp  StopWatch.hpp
src/CommonServer/datastructures/: AbstractCodes.hpp  ConcurrentLockFreeQueue.cpp  ConcurrentLockFreeQueue.hpp
src/CommonServer/handlers/: CLFQProcessor.cpp  CLFQProcessor.hpp  ConcurrentQueueProcessor.hpp
src/CommonServer/latency/: StopWatch.cpp  StopWatch.hpp
src/CommonServer/logging/: LogElement.hpp  LogLevel.hpp  LogType.hpp  Logger.cpp  Logger.hpp  LoggerManager.hpp
src/CommonServer/types/: DateTimes.hpp  MdTypes.hpp  NumericTypes.hpp
src/CommonServer/typesystem/: EnvironmentType.hpp  MdTypes.hpp  NumericTypes.hpp
src/CommonServer/utils/: Clock.cpp  Clock.hpp  ConfigManager.cpp  ConfigManager.hpp
src/DataStructures/: AbstractCodes.hpp
src/Exchange/marketdata/: MarketUpdate.hpp
src/Exchange/matcher/: MEOrder.hpp  MEOrdersAtPrice.hpp
src/Exchange/orderserver/: ClientRequest.hpp  ClientResponse.hpp  MEClientRequest.hpp  MEClientResponse.hpp
src/MarketData/: CMakeLists.txt  IMarketDataProvider.hpp  MarketDataConsumer.cpp  MarketDataConsumer.hpp  MarketDataHistoricalClient.cpp  MarketDataHistoricalClient.hpp  MarketDataLiveClient.cpp  MarketDataLiveClient.hpp  MarketDataProcessor.cpp  MarketDataProcessor.hpp  MarketDataStreamingClient.cpp  MarketDataStreamingClient.hpp  MarketDataUtils.cpp  MarketDataUtils.hpp  OrderBook.cpp  OrderBook.hpp
src/MarketData/Clients/: IMarketDataProvider.hpp  MarketDataHistoricalClient.cpp  MarketDataHistoricalClient.hpp  MarketDataLiveClient.cpp  MarketDataLiveClient.hpp  MarketDataStreamingClient.cpp  MarketDataStreamingClient.hpp
src/MarketData/Consumers/: MarketDataConsumer.cpp  MarketDataConsumer.hpp
src/MarketData/Processors/: MarketDataProcessor.cpp  MarketDataProcessor.hpp
src/MarketData/clients/: IMarketDataProvider.hpp  MarketDataHistoricalClient.cpp  MarketDataHistoricalClient.hpp  MarketDataLiveClient.cpp  MarketDataLiveClient.hpp  MarketDataStreamingClient.cpp  MarketDataStreamingClient.hpp
src/MarketData/consumers/: MarketDataConsumer.cpp  MarketDataConsumer.hpp
src/MarketData/processors/: MarketDataProcessor.cpp  MarketDataProcessor.hpp
src/MessageObjects/: CMakeLists.txt
src/MessageObjects/Environments/: EnvironmentType.hpp
src/MessageObjects/LogLevels/: LogLevel.hpp
src/MessageObjects/MarketData/: MdEntity.cpp  MdEntity.hpp  OrderAction.hpp  PriceLevel.hpp  Quote.cpp  Quote.hpp  Side.hpp
src/MessageObjects/MarketData/OrderBook/: Book.cpp  Book.hpp  OrderAction.hpp  PriceLevel.hpp  Quote.hpp  Side.hpp
src/MessageObjects/marketdata/: MdEntity.cpp  MdEntity.hpp  OrderAction.hpp  OrderBookAction.hpp  OrderEvent.hpp  PriceLevel.hpp  Quote.hpp  Side.hpp
src/MessageObjects/strategies/: ExecType.hpp  Order.hpp  OrderStatus.hpp  PositionInfo.hpp
src/Resources/: ConfigReader.hpp
src/RiskManager/: CMakeLists.txt  RiskEngine.cpp  RiskEngine.hpp  RiskMain.cpp  RiskManager.hpp  RiskServer.cpp  RiskServer.hpp
src/RiskManager/managers/: OrderManager.cpp  OrderManager.hpp  PositionManager.cpp  PositionManager.hpp  RiskManager.cpp  RiskManager.hpp
src/Strategies/: CMakeLists.txt  FeatureEngine.cpp  FeatureEngine.hpp  MarketMaker.cpp  MarketMaker.hpp  StrategyEngine.cpp  StrategyEngine.hpp  StrategyMain.cpp  StrategyServer.cpp  StrategyServer.hpp
src/Strategies/algos/: FeatureEngine.cpp  FeatureEngine.hpp  MarketMaker.cpp  MarketMaker.hpp
src/StrategyCommon/: CMakeLists.txt  FeatureEngine.cpp
src/StrategyCommon/Handlers/: CLFQProcessor.cpp  CLFQProcessor.hpp
src/StrategyCommon/handlers/: CLFQProcessor.cpp  CLFQProcessor.hpp
src/StrategyCommon/managers/: OrderManager.cpp  OrderManager.hpp  PositionManager.cpp  PositionManager.hpp  RiskManager.cpp  StrategyConfigManager.cpp  StrategyConfigManager.hpp
src/StrategyCommon/utils/: OrderUtil.cpp  OrderUtil.hpp
